--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<li><a href="#one">My offering</a></li>
 							<li><a href="#two">Resume</a></li>
 							<li><a href="#three">Projects Description</a></li>
-							/* <li><a href="#last">Contact me</a></li> */
+							<!-- <li><a href="#last">Contact me</a></li> -->
 						</ul>
 					</nav>
 				</div>
