--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">BIOGRAPHY</a></li>
+							<li><a href="#intro">Biography</a></li>
 							<li><a href="#one">My offering</a></li>
 							<li><a href="#two">Resume</a></li>
 							<li><a href="#three">Projects Description</a></li>
