--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							<h1 align="center">George Lopez<h1>
 							<h2 align="center">Portfolio</h2>
 							<h3>MY RESUME</h3>
-							<p><u>PLEASE CONTACT ME FOR A PRINTED VERSION OF MY RESUME WHICH ALSO INCLUDES PERSONAL INFORMATION</u><p>
+							<p style="color: darkblue;"><u>PLEASE CONTACT ME FOR A PRINTED VERSION OF MY RESUME WHICH ALSO INCLUDES PERSONAL INFORMATION</u><p>
 							<p>SUMMARY OF QUALIFICATIONS</p>
 							<p>• Computer Science Professional with over fifteen years of Canadian experience in IT and Data Science education (graduate).<p>
 							<p>• Data Science experienced on NLP topic models.<p>
