--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 -->
 <html>
 	<head>
+    		<title>Justified Text Example</title>
+    		<style>
+       		 .justified-text {
+            		text-align: justify;
+        		}
+    		</style>
+	</head>
+	<head>
 		<title>Hyperspace by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
