--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 						    <h1 align="center">George Lopez<h1>
-							<h2 align="center">Portfolio</h2>
+							<h2 align="center">POTFOLIO</h2>
 							<h3>BIOGRAPHY</h3>
 							<p align="left">Computer Science practitioner with focus on data science/machine learning that has worked as a Data Scientist for a management consulting firm and also in the area of IT for global companies such as Scotiabank, Accenture and PwC.<p>Graduate of the machine learning mentorship program of SharpestMinds.
                             <p>Holds a Master of Science in Computer Science by Ryerson University in Canada and a Bachelor of Applied Mathematics and Computer Science by the University of Mexico (UNAM).<p>
@@ -62,7 +62,7 @@
 					<section id="one" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1 align="center">George Lopez<h1>
-							<h2 align="center">Portfolio</h2>
+							<h2 align="center">POTFOLIO</h2>
 							<h3>MY OFFERING</h3>
 							<p>I have experience with:<p>
 							<p>- Collecting data to perform analysis.<p>
@@ -90,9 +90,9 @@
 					<section id="two" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1 align="center">George Lopez<h1>
-							<h2 align="center">Portfolio</h2>
+							<h2 align="center">POTFOLIO</h2>
 							<h3>MY RESUME</h3>
-							<p style="color: darkblue;"><u>PLEASE CONTACT ME FOR A PRINTED VERSION OF MY RESUME WHICH ALSO INCLUDES PERSONAL INFORMATION</u><p>
+							<p style="color: darkblue;"><u>PLEASE CONTACT ME FOR A PRINTED VERSION OF MY RESUME WHICH ALSO INCLUDES PERSONAL INFORMATION</u></p>
 							<p>SUMMARY OF QUALIFICATIONS</p>
 							<p>• Computer Science Professional with over fifteen years of Canadian experience in IT and Data Science education (graduate).<p>
 							<p>• Data Science experienced on NLP topic models.<p>
@@ -172,7 +172,7 @@
 					<section id="three" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1 align="center">George Lopez<h1>
-							<h2 align="center">Portfolio</h2>
+							<h2 align="center">POTFOLIO</h2>
 							<h3>Projects Description</h3>						
 							<!-- <div class="container"> -->
 							<div class="row-fluid layout5-row cropParent  margins-topbottom padding-all ">
