--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 							<li><a href="#intro">Biography</a></li>
 							<li><a href="#one">My offering</a></li>
 							<li><a href="#two">Resume</a></li>
-							<li><a href="#three">Projects Description</a></li>
+							<li><a href="#three">Projects</a></li>
+							<li><a href="#four">Papers</a></li>
+							<li><a href="#four">Awards</a></li>
 							<!-- <li><a href="#last">Contact me</a></li> -->
 						</ul>
 					</nav>
