--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<form method="POST" action="send_email.php">
+<form method="POST" action="contact.php">
 <!--
 	Hyperspace by HTML5 UP
 	html5up.net | @ajlkn
