--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<li><a href="#three">Projects</a></li>
 							<li><a href="#four">Papers</a></li>
 							<li><a href="#four">Awards</a></li>
-							<!-- <li><a href="#last">Contact me</a></li> -->
+							<li><a href="#last">Contact me</a></li>
 						</ul>
 					</nav>
 				</div>
