--- a/index.html
+++ b/index.html
@@ -213,25 +213,7 @@
 					        <h2>Contact me</h2>
 					        <div class="split style1">
 					            <section>
-					                <form method="post" action="contact.php">
-					                    <div class="fields">
-					                        <div class="field half">
-					                            <label for="name">Name</label>
-					                            <input type="text" name="name" id="name" required />
-					                        </div>
-					                        <div class="field half">
-					                            <label for="email">Email</label>
-					                            <input type="email" name="email" id="email" required />
-					                        </div>
-					                        <div class="field">
-					                            <label for="message">Message</label>
-					                            <textarea name="message" id="message" rows="5" required></textarea>
-					                        </div>
-					                    </div>
-					                    <ul class="actions">
-					                        <li><input type="submit" class="button submit" value="Send Message" /></li>
-					                    </ul>
-					                </form>
+					                <p>If you have any questions, feel free to <a href="mailto:jlopez@torontomu.ca">email me</a>.</p>
 					            </section>
 					            <section>
 					                <ul class="contact">
@@ -240,7 +222,7 @@
 					                        <ul class="icons">
 					                            <li><a href="https://github.com/jlopeztmu" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
 					                            <li><a href="https://www.linkedin.com/in/cytlalli" class="icon brands fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
-					                            
+					                        </ul>
 					                    </li>
 					                </ul>
 					            </section>
