--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+AIL ME<!DOCTYPE HTML>
 <!--
 	Hyperspace by HTML5 UP
 	html5up.net | @ajlkn
@@ -221,8 +221,16 @@
 					    <div class="inner">
 					        <h2>Contact me</h2>
 					        <div class="split style1">
+						
 					            <section>
-					                <p>If you have any questions, feel free to <a href="mailto:jlopez@torontomu.ca">email me</a>.</p>
+					                <p>If you have any questions, feel free to <a href="mailto:jlopez [at] torontomu [dot] ca" 
+								<script type="text/javascript">
+								    // JavaScript to obfuscate the email address
+								    var user = "jlopez";
+								    var domain = "torontomu.ca";
+								    document.write('<a href="mailto:' + user + '@' + domain + '">email me</a>');
+								</script>							   
+							style="color: red;">EMAIL ME</a>.</p>
 					            </section>
 					            <section>
 					                <ul class="contact">
