--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@ AIL ME<!DOCTYPE HTML>
 								    // JavaScript to obfuscate the email address
 								    var user = "jlopez";
 								    var domain = "torontomu.ca";
-								    document.write('<a href="mailto:' + user + '@' + domain + '">email me</a>');
+								    document.write('<a href="mailto:' + user + '@' + domain + style="color: red;">EMAIL ME</a>');
 								</script>							   
-							style="color: red;">EMAIL ME</a>.</p>
+							.</p>
 					            </section>
 					            <section>
 					                <ul class="contact">
