--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ AIL ME<!DOCTYPE HTML>
 								    // JavaScript to obfuscate the email address
 								    var user = "jlopez";
 								    var domain = "torontomu.ca";
-								    document.write('<a href="mailto:' + user + '@' + domain + style="color: red;">EMAIL ME</a>');
+								    document.write('<a href="mailto:' + user + '@' + domain + '" style="color: red;">EMAIL ME</a>');
 								</script>							   
 							.</p>
 					            </section>
