--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ AIL ME<!DOCTYPE HTML>
 					        <div class="split style1">
 						
 					            <section>
-					                <p>If you have any questions, feel free to <a href="mailto:jlopez [at] torontomu [dot] ca" 
+					                <p>If you have any questions, feel free to 
 								<script type="text/javascript">
 								    // JavaScript to obfuscate the email address
 								    var user = "jlopez";
