--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ AIL ME<!DOCTYPE HTML>
 							<li><a href="#three">Projects</a></li>
 							<li><a href="#four">Papers</a></li>
 							<li><a href="#four">Awards</a></li>
-							<li><a href="#last">Contact me</a></li>
+							<li><a href="#last">GitHub and LinkedIN</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -233,21 +233,9 @@ AIL ME<!DOCTYPE HTML>
 						</div>
 					<section id="last" class="wrapper style1 fade-up">
 					    <div class="inner">
-					        <h2>Contact me</h2>
+					        <h2>GITHUB and LINKEDIN</h2>
 					        <div class="split style1">
-					            <section>
-					                <p>If you have any questions, feel free to 
-					                    <span id="email-link"></span>
-					                    .
-					                </p>
-					                <script type="text/javascript">
-					                    // JavaScript to obfuscate the email address
-					                    var user = "jlopez";
-					                    var domain = "torontomu.ca";
-					                    var emailLink = '<a href="mailto:' + user + '@' + domain + '" style="color: red;">email me</a>';
-					                    document.getElementById('email-link').innerHTML = emailLink;
-					                </script>
-					            </section>
+					           
 					            <section>
 					                <ul class="contact">
 					                    <li>
