--- a/index.html
+++ b/index.html
@@ -239,10 +239,9 @@ AIL ME<!DOCTYPE HTML>
 					            <section>
 					                <ul class="contact">
 					                    <li>
-					                        <h3>Social</h3>
 					                        <ul class="icons">
-					                            <li><a href="https://github.com/jlopeztmu" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
-					                            <li><a href="https://www.linkedin.com/in/cytlalli" class="icon brands fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
+					                            <li><a href="https://github.com/jlopeztmu" class="icon brands fa-github fa-2x" target="_blank"><span class="label">GitHub</span></a></li>
+					                            <li><a href="https://www.linkedin.com/in/cytlalli" class="icon brands fa-linkedin-in fa-2x" target="_blank"><span class="label">LinkedIn</span></a></li>
 					                        </ul>
 					                    </li>
 					                </ul>
