--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ AIL ME<!DOCTYPE HTML>
 					<section id="last" class="wrapper style1 fade-up">
 					    <div class="inner">
 					        <h2>GITHUB and LINKEDIN</h2>
-					        <div class="split style1">
+					        <!--div class="split style1"-->
 					           
 					            <section>
 					                    <li>
@@ -243,7 +243,7 @@ AIL ME<!DOCTYPE HTML>
 
 					                    </li>
 					            </section>
-					        </div>
+					        <!-- /div -->
 					    </div>
 </section>
 					        </div>
