--- a/index.html
+++ b/index.html
@@ -236,13 +236,13 @@ AIL ME<!DOCTYPE HTML>
 					        <h2>GITHUB and LINKEDIN</h2>
 					        <!--div class="split style1"-->
 					           
-					            <section>
+					            <!--section-->
 					                    <li>
 					                            <li><a href="https://github.com/jlopeztmu" class="icon brands fa-github fa-2x" target="_blank"><span class="label">GitHub</span></a></li>
 					                            <li><a href="https://www.linkedin.com/in/cytlalli" class="icon brands fa-linkedin-in fa-2x" target="_blank"><span class="label">LinkedIn</span></a></li>
 
 					                    </li>
-					            </section>
+					            <!--/section-->
 					        <!-- /div -->
 					    </div>
 </section>
