--- a/index.html
+++ b/index.html
@@ -234,12 +234,10 @@ AIL ME<!DOCTYPE HTML>
 					<section id="last" class="wrapper style1 fade-up">
 					    <div class="inner">
 					        <h2>GITHUB and LINKEDIN</h2>
-					           
-					                    <li>
-					                            <li><a href="https://github.com/jlopeztmu" class="icon brands fa-github fa-2x" target="_blank"><span class="label">GitHub</span></a></li>
-					                            <li><a href="https://www.linkedin.com/in/cytlalli" class="icon brands fa-linkedin-in fa-2x" target="_blank"><span class="label">LinkedIn</span></a></li>
-
-					                    </li>
+						<ul class="icons">
+					                <li><a href="https://github.com/jlopeztmu" class="icon fa-brands fa-github fa-2x" target="_blank"><span class="label">GitHub</span></a></li>
+					                <li><a href="https://www.linkedin.com/in/cytlalli" class="icon fa-brands fa-linkedin-in fa-2x" target="_blank"><span class="label">LinkedIn</span></a></li>
+					        </ul>    
 
 					    </div>
 					</section>
