--- a/index.html
+++ b/index.html
@@ -15,6 +15,31 @@ AIL ME<!DOCTYPE HTML>
         }
     </script>
 </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Test</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        .email-link {
+            color: red;
+        }
+        .icons {
+            list-style: none;  /* Remove list bullets */
+            padding: 0;  /* Remove padding */
+            margin: 0;  /* Remove margin */
+        }
+        .icons li {
+            display: inline-block;  /* Display list items inline */
+            margin-right: 10px;  /* Add some spacing between icons */
+        }
+        .icon {
+            font-size: 2em;  /* Adjust the size of the icons */
+        }
+    </style>
+</head>
+	
 <body>
     <button onclick="registerHandler()">Set Gmail as Mailto Handler</button>
 </body>
@@ -25,6 +50,7 @@ AIL ME<!DOCTYPE HTML>
        		 .justified-text {
             		text-align: justify;
         		}
+		
     		</style>
 	</head>
 	<head>
