--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@ AIL ME<!DOCTYPE HTML>
         .icon {
             font-size: 2em;  /* Adjust the size of the icons */
         }
+	#sidebar nav ul li a {
+            text-decoration: none;
+            color: black;
+            font-weight: bold;
+            display: block;
+            padding: 10px;
+            transition: color 0.3s, background-color 0.3s;
+        }
+        #sidebar nav ul li a:hover {
+            color: red;
+        }
     </style>
 </head>
 	
