--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ AIL ME<!DOCTYPE HTML>
             transition: color 0.3s, background-color 0.3s;
         }
         #sidebar nav ul li a:hover {
-            color: red;
+            color: black;
         }
     </style>
 </head>
