--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ AIL ME<!DOCTYPE HTML>
 							<h1 align="center">George Lopez<h1>
 							<h2 align="center">PORTFOLIO</h2>
 							<h3>MY RESUME</h3>
-							<p><u><strong></strong>PLEASE CONTACT ME FOR A PRINTED VERSION OF MY RESUME WHICH ALSO INCLUDES PERSONAL INFORMATION</u></p>
+							<p style="color: red;"><u><strong>PLEASE CONTACT ME FOR A PRINTED VERSION OF MY RESUME WHICH ALSO INCLUDES PERSONAL INFORMATION</strong></u></p>
 							<p>SUMMARY OF QUALIFICATIONS</p>
 							<p>• Computer Science Professional with over fifteen years of Canadian experience in IT and Data Science education (graduate).<p>
 							<p>• Data Science experienced on NLP topic models.<p>
