--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-AIL ME<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sidebar Example</title>
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -37,6 +38,21 @@ AIL ME<!DOCTYPE HTML>
             transition: color 0.3s, background-color 0.3s;
         }
         #sidebar nav ul li a:hover {
+            color: red;
+        }
+        .icons {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+        .icons li {
+            display: inline-block;
+            margin-right: 10px;
+        }
+        .icon {
+            font-size: 2em;
+        }
+        .email-link {
             color: red;
         }
     </style>
