--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <p>Data Scientist (contract)</p>
                 <p>Natural Language Processing (NLP) with Topic Modeling and Sentiment Analysis application creation including back-end and database to support decision making for clients through Data Mining. Architected application (Alpha-1 project), developed AI-Engine and database.</p>
                 <p>Punctual consulting.</p>
-                <p>Please see customer testimonial posted in LinkedIn by the CEO <a href="https://lnkd.in/ewRYrMp"><strong>HERE</strong></a>:</p>
+                <p style="color: red;">Please see customer testimonial posted in LinkedIn by the CEO <a href="https://lnkd.in/ewRYrMp"><strong>HERE</strong></a>:</p>
                 <p>Towards Data Science May 2019 - Present</p>
                 <p>Author</p>
                 <p>Written and published articles on top Data Science topics (including ML and AI)</p>
