--- a/index.html
+++ b/index.html
@@ -108,25 +108,32 @@
                 <h1 align="center">George Lopez</h1>
                 <h2 align="center">PORTFOLIO</h2>
                 <h3>MY OFFERING</h3>
-                <p>I have experience with:</p>
-                <p>- Collecting data to perform analysis.</p>
-                <p>- Working with large amounts of data.</p>
-                <p>- Converting unstructured to structured data.</p>
-                <p>- Preparing data for analysis (includes manipulation and cleansing).</p>
-                <p>- Getting insight from data for assisting decision-making (including use of ML algorithms).</p>
-                <p>- Natural Language Processing, particularly probabilistic topic models, applying the LDA algorithm to unstructured text corpuses.</p>
-                <p>- Creating and manipulating data in relational databases using SQL (Cloud SQL with PostgreSQL). Data modelers as ER/ONE. DB Management tools such as PGAdmin.</p>
-                <p>- Working with Linux OS (Ubuntu).</p>
-                <p>- Programming in Python and R languages (RStudio, Jupyter Notebook, Google Colab, PyCharm). Also, C, C++ and archaic languages.</p>
-                <p>Including:</p>
-                <p>- Exposure to NoSQL DB’s (MongoDB), Hadoop and to Apache Spark.</p>
-                <p>- Development Tools: GitHub, SourceTree, Docker.</p>
-                <p>- Platforms: Google Cloud.</p>
-                <p>- Data Science frameworks and libraries: Tensorflow, scikit-learn, pandas, fastai.</p>
-                <p>- Project Management: Waterfall and Agile paradigms. Specialized in software quality assurance.</p>
-                <p>Contributing to resolve the problems that the organization faces and cooperating with solutions for moving it forward.</p>
-                <p>Teaming up with the proper people for reaching a common objective as a group.</p>
-                <p>Willing to go the extra mile to achieve set goals.</p>
+                <body>
+                    <!--h2>Experience</h2-->
+                    <p>I have experience with:</p>
+                    <ul>
+                        <li>Collecting data to perform analysis.</li>
+                        <li>Working with large amounts of data.</li>
+                        <li>Converting unstructured data to structured data.</li>
+                        <li>Preparing data for analysis (including manipulation and cleansing).</li>
+                        <li>Gaining insights from data to assist decision-making (including the use of ML algorithms).</li>
+                        <li>Natural Language Processing, particularly probabilistic topic models, applying the LDA algorithm to unstructured text corpora.</li>
+                        <li>Creating and manipulating data in relational databases using SQL (Cloud SQL with PostgreSQL). Data modelers such as ER/ONE and DB management tools like PGAdmin.</li>
+                        <li>Working with Linux OS (Ubuntu).</li>
+                        <li>Programming in Python and R languages (RStudio, Jupyter Notebook, Google Colab, PyCharm). Also, C, C++, and archaic languages.</li>
+                    </ul>
+                    <p>Including:</p>
+                    <ul>
+                        <li>Exposure to NoSQL databases (MongoDB), Hadoop, and Apache Spark.</li>
+                        <li>Development tools: GitHub, SourceTree, Docker.</li>
+                        <li>Platforms: Google Cloud.</li>
+                        <li>Data Science frameworks and libraries: TensorFlow, scikit-learn, pandas, fastai.</li>
+                        <li>Project Management: Waterfall and Agile paradigms, specialized in software quality assurance.</li>
+                    </ul>
+                    <p>Contributing to solving the problems that the organization faces and cooperating with solutions to move it forward.</p>
+                    <p>Teaming up with the right people to achieve common objectives as a group.</p>
+                    <p>Willing to go the extra mile to achieve set goals.</p>
+                </body>
             </div>
         </section>
 
