--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <nav>
                 <ul>
                     <li><a href="#intro">Biography</a></li>
-                    <li><a href="#one">My offering</a></li>
+                    <li><a href="#one">Experience</a></li>
                     <li><a href="#two">Resume</a></li>
                     <li><a href="#three">Projects</a></li>
                     <li><a href="#four">Papers</a></li>
@@ -107,7 +107,7 @@
             <div class="inner">
                 <h1 align="center">George Lopez</h1>
                 <h2 align="center">PORTFOLIO</h2>
-                <h3>MY OFFERING</h3>
+                <h3>EXPERIENCE</h3>
                 <body>
                     <!--h2>Experience</h2-->
                     <p>I have experience with:</p>
