--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <nav>
                 <ul>
                     <li><a href="#intro">Biography</a></li>
-                    <li><a href="#one">Experience</a></li>
+                    <li><a href="#one">Skills and Experience</a></li>
                     <li><a href="#two">Resume</a></li>
                     <li><a href="#three">Projects</a></li>
                     <li><a href="#four">Papers</a></li>
@@ -91,14 +91,14 @@
                 <h1 align="center">George Lopez</h1>
                 <h2 align="center">PORTFOLIO</h2>
                 <h3>BIOGRAPHY</h3>
-                <p>Computer Science practitioner with a focus on data science and machine learning. I have worked as a Data Scientist for a management consulting firm and in the IT sector for global companies such as Scotiabank, Accenture, and PwC.</p>
-                <p>Graduate of the machine learning mentorship program at SharpestMinds.</p>
-                <p>Holds a Master of Science in Computer Science from Ryerson University in Canada and a Bachelor of Applied Mathematics and Computer Science from the National Autonomous University of Mexico (UNAM).</p>
-                <p>Currently pursuing a Doctor of Philosophy degree in Computer Science with a focus on Artificial Intelligence and Deep Learning at Toronto Metropolitan University in Toronto, Canada.</p>
-                <p>Possesses the skills and knowledge to tackle information technology and data science challenges.</p>
-                <p>Passionate about practicing Data Science and learning new related technologies.</p>
-                <p>A strong team member who enjoys taking on challenges.</p>
-                <p>An avid learner of new technologies and constantly seeks to improve my work.</p>
+                <p>As a Computer Science practitioner with a focus on data science (including machine learning and deep learning), experience includes working as a Data Scientist for a management consulting firm and in the IT sector for global companies such as Scotiabank, Accenture, and PwC.</p>
+                <p>A graduate of the machine learning mentorship program at SharpestMinds.</p>
+                <p>Holds a Master of Science in Computer Science from Toronto Metropolitan University, Canada, and a Bachelor of Applied Mathematics and Computer Science from the National Autonomous University of Mexico (UNAM).</p>
+                <p>Expected to graduate with a Doctor of Philosophy in Computer Science, focusing on Artificial Intelligence and Deep Learning, from Toronto Metropolitan University, Canada, by mid-2025 (working on dissertation only).</p>
+                <p>Equipped with the skills and knowledge to tackle information technology and data science challenges.</p>
+                <p>Passionate about practicing Data Science and continuously learning new related technologies.</p>
+                <p>A strong team member who enjoys taking on challenges and working collaboratively.</p>
+                <p>Dedicated to improving work through constant learning and adapting to new technologies.</p>
             </div>
         </section>
 
@@ -107,8 +107,24 @@
             <div class="inner">
                 <h1 align="center">George Lopez</h1>
                 <h2 align="center">PORTFOLIO</h2>
-                <h3>EXPERIENCE</h3>
+                <h3>SKILLS AND EXPERIENCE</h3>
                 <body>
+                    <h3>Technical Skills</h3>
+                    <ul>
+                        <li><strong>Programming Languages:</strong> Proficiency in Python, R, Java and SQL. Familiarity with Tableau. Experience with archaic programming languages.</li>
+                        <li><strong>Machine Learning and AI:</strong> Strong understanding of machine learning algorithms (e.g., regression, classification, clustering, and deep learning), and experience with AI tools like TensorFlow, PyTorch, and scikit-learn.</li>
+                        <li><strong>Data Manipulation and Analysis:</strong> Experience with data analysis, statistical methods, and data manipulation using libraries such as pandas and NumPy.</li>
+                        <li><strong>Big Data Technologies:</strong> Knowledge of big data frameworks and tools such as Hadoop and Spark.</li>
+                        <li><strong>Cloud Computing:</strong> Skills in cloud platforms like AWS, Azure, and Google Cloud.</li>
+                        <li><strong>Data Visualization:</strong> Skills in data visualization tools like Tableau, and matplotlib to effectively communicate insights.</li>
+                        <li><strong>Database Management:</strong> Proficient in Relational Database Systems and SQL for data retrieval and management.</li>
+                    </ul>
+                    <h3>Soft Skills</h3>
+                    <ul>
+                        <li><strong>Data Storytelling:</strong> Ability to translate complex data findings into actionable insights and present them clearly to stakeholders.</li>
+                        <li><strong>Team Collaboration:</strong> Strong teamwork and communication skills to work effectively with cross-functional teams.</li>
+                        <li><strong>Continuous Learning:</strong> Eagerness to stay updated with the latest developments in data science and related technologies.</li>
+                    </ul>
                     <!--h2>Experience</h2-->
                     <p>I have experience with:</p>
                     <ul>
@@ -120,14 +136,14 @@
                         <li>Natural Language Processing, particularly probabilistic topic models, applying the LDA algorithm to unstructured text corpora.</li>
                         <li>Creating and manipulating data in relational databases using SQL (Cloud SQL with PostgreSQL). Data modelers such as ER/ONE and DB management tools like PGAdmin.</li>
                         <li>Working with Linux OS (Ubuntu).</li>
-                        <li>Programming in Python and R languages (RStudio, Jupyter Notebook, Google Colab, PyCharm). Also, C, C++, and archaic languages.</li>
+                        <li>Programming in Python and R languages (RStudio, Jupyter Notebook, Google Colab). Also, Java, C, C++, and archaic languages.</li>
                     </ul>
                     <p>Including:</p>
                     <ul>
                         <li>Exposure to NoSQL databases (MongoDB), Hadoop, and Apache Spark.</li>
                         <li>Development tools: GitHub, SourceTree, Docker.</li>
                         <li>Platforms: Google Cloud.</li>
-                        <li>Data Science frameworks and libraries: TensorFlow, scikit-learn, pandas, fastai.</li>
+                        <li>Data Science frameworks and libraries: Pytorch, TensorFlow, scikit-learn, pandas, fastai.</li>
                         <li>Project Management: Waterfall and Agile paradigms, specialized in software quality assurance.</li>
                     </ul>
                     <p>Contributing to solving the problems that the organization faces and cooperating with solutions to move it forward.</p>
