--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <li><a href="#two">Resume</a></li>
                     <li><a href="#three">Projects</a></li>
                     <li><a href="#four">Papers</a></li>
-                    <li><a href="#four">Awards</a></li>
+                    <li><a href="#five">Awards</a></li>
                     <li><a href="#last">GitHub and LinkedIn</a></li>
                 </ul>
             </nav>
@@ -358,7 +358,30 @@
                                         </div>
         </section>
 
-        <!-- GitHub and LinkedIn -->
+
+<!-- Four - Papers -->
+<section id="last" class="wrapper style1 fade-up">
+    <div class="inner">
+        <h2>PAPERS AND PUBLICATIONS</h2>
+        <div class="content">
+            <li><PAPER 1 NAME></a></li>
+            <li><PAPER 2 NAME></a></li>
+        </div>
+    </div>
+</section>
+
+<!-- five - Awards -->
+<section id="last" class="wrapper style1 fade-up">
+    <div class="inner">
+        <h2>PAPERS AND PUBLICATIONS</h2>
+        <div class="content">
+            <li><AWARD 1 NAME></a></li>
+            <li><AWARD 2 NAME></a></li>
+        </div>
+    </div>
+</section>
+                                        
+<!-- GitHub and LinkedIn -->
 <section id="last" class="wrapper style1 fade-up">
     <div class="inner">
         <h2>GITHUB and LINKEDIN</h2>
