--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 
 
 <!-- Four - Papers -->
-<section id="last" class="wrapper style1 fade-up">
+<section id="four" class="wrapper style1 fade-up">
     <div class="inner">
         <h2>PAPERS AND PUBLICATIONS</h2>
         <div class="content">
@@ -371,7 +371,7 @@
 </section>
 
 <!-- five - Awards -->
-<section id="last" class="wrapper style1 fade-up">
+<section id="five" class="wrapper style1 fade-up">
     <div class="inner">
         <h2>PAPERS AND PUBLICATIONS</h2>
         <div class="content">
