--- a/index.html
+++ b/index.html
@@ -362,10 +362,12 @@
 <!-- Four - Papers -->
 <section id="four" class="wrapper style1 fade-up">
     <div class="inner">
+        <h1 align="center">George Lopez</h1>
+        <h2 align="center">PORTFOLIO</h2>
         <h2>PAPERS AND PUBLICATIONS</h2>
         <div class="content">
-            <li><PAPER 1 NAME></a></li>
-            <li><PAPER 2 NAME></a></li>
+            <p><PAPER 1 NAME></p>
+            <p><PAPER 2 NAME></p>
         </div>
     </div>
 </section>
@@ -373,10 +375,12 @@
 <!-- five - Awards -->
 <section id="five" class="wrapper style1 fade-up">
     <div class="inner">
-        <h2>PAPERS AND PUBLICATIONS</h2>
-        <div class="content">
-            <li><AWARD 1 NAME></a></li>
-            <li><AWARD 2 NAME></a></li>
+        <h1 align="center">George Lopez</h1>
+        <h2 align="center">PORTFOLIO</h2>
+        <h2>AWARDS</h2>
+        <div>
+            <p><AWARD 1 NAME></p>
+            <p><AWARD 2 NAME></p>
         </div>
     </div>
 </section>
