--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@
         <div class="content">
             <p><PAPER 1 NAME></p>
             <p><PAPER 2 NAME></p>
+            <p><PAPER 3 NAME></p>
         </div>
     </div>
 </section>
