--- a/index.html
+++ b/index.html
@@ -366,9 +366,9 @@
         <h2 align="center">PORTFOLIO</h2>
         <h2>PAPERS AND PUBLICATIONS</h2>
         <div class="content">
-            <p><PAPER 1 NAME></p>
-            <p><PAPER 2 NAME></p>
-            <p><PAPER 3 NAME></p>
+            <p>PAPER 1 NAME</p>
+            <p>PAPER 2 NAME</p>
+            <p>PAPER 3 NAME</p>
         </div>
     </div>
 </section>
@@ -380,8 +380,8 @@
         <h2 align="center">PORTFOLIO</h2>
         <h2>AWARDS</h2>
         <div>
-            <p><AWARD 1 NAME></p>
-            <p><AWARD 2 NAME></p>
+            <p>AWARD 1 NAME</p>
+            <p>AWARD 2 NAME</p>
         </div>
     </div>
 </section>
