--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <section id="intro" class="wrapper style1 fullscreen fade-up">
             <div class="inner">
                 <h1 align="center">George Lopez</h1>
-                <h2 align="center">PORTFOLIO</h2>
+                <h2 align="center">!!!!!!!!!!!!PORTFOLIO</h2>
                 <h3>BIOGRAPHY</h3>
                 <p>As a Computer Science practitioner with a focus on data science (including machine learning and deep learning), experience includes working as a Data Scientist for a management consulting firm and in the IT sector for global companies such as Scotiabank, Accenture, and PwC.</p>
                 <p>A graduate of the machine learning mentorship program at SharpestMinds.</p>
