--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             box-sizing: border-box;
         }
         #sidebar {
-            width: 50px;
+            width: 500px;
             position: fixed;
             top: 0;
             left: 0;
@@ -73,7 +73,7 @@
         <div class="inner">
             <nav>
                 <ul>
-                    <li><a href="#intro">Biography</a></li>
+                    <li><a href="#intro">BiBIUography</a></li>
                     <li><a href="#one">Skills and Experience</a></li>
                     <li><a href="#two">Resume</a></li>
                     <li><a href="#three">Projects</a></li>
