--- a/index.html
+++ b/index.html
@@ -73,13 +73,14 @@
         <div class="inner">
             <nav>
                 <ul>
-                    <li><a href="#intro">joijoijoijoijoijoijoijoBiographykpokpokpokpokpokpokpokpok</a></li>
+                    <li><a href="#intro">Biography</a></li>
                     <li><a href="#one">Skills and Experience</a></li>
                     <li><a href="#two">Resume</a></li>
                     <li><a href="#three">Projects</a></li>
                     <li><a href="#four">Papers</a></li>
                     <li><a href="#five">Awards</a></li>
-                    <li><a href="#last">GitHub and LinkedIn</a></li>
+                    <li><a href="#six">GitHub</a></li>
+                    <li><a href="#last">LinkedIn</a></li>
                 </ul>
             </nav>
         </div>
@@ -388,16 +389,24 @@
     </div>
 </section>
                                         
-<!-- GitHub and LinkedIn -->
+<!-- GitHub -->
 <section id="last" class="wrapper style1 fade-up">
     <div class="inner">
-        <h2>GITHUB and LINKEDIN</h2>
+        <h2>GITHUB</h2>
         <ul class="icons">
             <li><a href="https://github.com/jlopeztmu" class="icon fa-brands fa-github fa-2x" target="_blank"></a></li>
-            <li><a href="https://www.linkedin.com/in/cytlalli" class="icon fa-brands fa-linkedin-in fa-2x" target="_blank"></a></li>
         </ul>
     </div>
 </section>
+<!-- LinkedIn -->
+<section id="last" class="wrapper style1 fade-up">
+    <div class="inner">
+        <h2>LINKEDIN</h2>
+        <ul class="icons">
+            <li><a href="https://www.linkedin.com/in/cytlalli" class="icon fa-brands fa-linkedin-in fa-2x" target="_blank"></a></li>
+        </ul>
+    </div>
+</section>                                       
     </div>
 
     <!-- Scripts -->
