--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="assets/css/main.css">
+    /* <link rel="stylesheet" href="assets/css/main.css"> */
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -14,16 +14,12 @@
             box-sizing: border-box;
         }
         #sidebar {
-            width: 150px;
+            width: 170px;
             position: fixed;
             top: 0;
             left: 0;
             height: 100%;
-            background-color: #f4f4f8;
-            padding: 10px;
-        }
-        #sidebar .inner {
-            padding: 20px;
+            background-color: #f4f4f4;
         }
         #sidebar nav ul {
             list-style: none;
