--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
+            box-sizing: border-box; 
+            display: flex;
         }
         #sidebar {
-            width: 170px;
+            width: 180px;
             position: fixed;
             top: 0;
             left: 0;
             height: 100%;
             background-color: #f4f4f4;
+        }
+        .content {
+            flex: 1;
+            backhrpund-color: #fff;
         }
         #sidebar nav ul {
             list-style: none;
