--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             display: flex;
         }
         #sidebar {
-            width: 180px;
+            width: 190px;
             position: fixed;
             top: 0;
             left: 0;
@@ -24,7 +24,7 @@
         }
         .content {
             flex: 1;
-            backhrpund-color: #fff;
+            background-color: #fff;
         }
         #sidebar nav ul {
             list-style: none;
