--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 flex-direction: column;
             }
             #sidebar {
-                position: static;
+                position: fixed;
                 width: 100%;
                 height: auto;
                 background-color: #f4f4f4;
